fixed amout me overflow issue in mobile browser

--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -33,3 +33,9 @@
   vertical-align: middle;
   margin-right: 1rem;
 }
+
+@media (max-width: 575px) {
+  .icon {
+    height: 2rem;
+  }
+}
